# rune-vcs

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  .runeignore  .runeignore.yml  CHANGELOG.md  CHECKLIST.md  CLI_OPTIMIZATION_COMPLETE.md  CLI_OPTIMIZATION_PLAN.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Formula-rune.rb  HOMEBREW_FORMULA_v0.3.1-alpha.5.md  HOMEBREW_README.md  HOME_SERVER_GUIDE.md  MISSING_FUNCTIONALITY.md  OPTIMIZATION_SUMMARY.md  PHASE_7_4_COMPLETION_REPORT.md  PHASE_7_STATUS.md  PLAN.md  PRODUCT_ANALYSIS_REPORT.md  README.md  RELEASE_NOTES_v0.0.1.md  RELEASE_NOTES_v0.3.0-alpha.1.md  RELEASE_NOTES_v0.3.0-alpha.2.md  ROADMAP.md  SUNDAY_TESTING_GUIDE.md  build_macos_release.sh  build_release.sh  config.js  create_release.sh  debug_branch.rs  deploy_server.sh  docker-compose.multi-server.yml  docker-compose.production.yml  docker-compose.yml  homebrew-formula-source.rb  (+26 more)
.github/workflows/: ci.yml  docker.yml  homebrew-tap.yml  release.yml
benches/: Cargo.toml  performance_benchmarks.rs
crates/rune-ai/: Cargo.toml
crates/rune-ai/src/: analysis.rs  automation.rs  lib.rs  predictions.rs
crates/rune-cli/: Cargo.toml
crates/rune-cli/src/: api.rs  intelligence.rs  intelligence_new.rs  intelligence_old.rs  lib.rs  locking.rs  locking_new.rs  main.rs  main.rs.backup  performance.rs  style.rs  tests.rs  tests_clean.rs  unreal.rs
crates/rune-cli/src/commands/: advanced.rs  clone.rs  delta.rs  draft.rs  intelligence.rs  lfs.rs  mod.rs  plan.rs  remote.rs  shrine.rs  workspace.rs
crates/rune-core/: Cargo.toml
crates/rune-core/src/: ignore.rs  intelligence.rs  lib.rs
crates/rune-delta/: Cargo.toml
crates/rune-delta/src/: lib.rs
crates/rune-docs/: Cargo.toml
crates/rune-docs/content/: getting-started.md
crates/rune-docs/src/: content.rs  examples.rs  lib.rs  server.rs  templates.rs  tutorial.rs
crates/rune-docs/static/: style.css
crates/rune-draft/: Cargo.toml
crates/rune-draft/src/: lib.rs
crates/rune-lfs/: Cargo.toml
crates/rune-lfs/src/: lib.rs  locking.rs
crates/rune-pack/: Cargo.toml
crates/rune-pack/src/: lib.rs
crates/rune-performance/: Cargo.toml
crates/rune-performance/src/: advanced.rs  benchmarks.rs  caching.rs  lib.rs  memory.rs  monitoring.rs  network.rs  network_storage.rs  parallel.rs  simple.rs
crates/rune-planning/: Cargo.toml
crates/rune-planning/src/: lib.rs
crates/rune-remote/: Cargo.toml
crates/rune-remote/src/: auth.rs  client.rs  lib.rs  sync.rs
crates/rune-security/: Cargo.toml
crates/rune-security/src/: audit.rs  authentication.rs  compliance.rs  encryption.rs  lib.rs
crates/rune-store/: Cargo.toml
crates/rune-store/src/: lib.rs
crates/rune-workspace/: Cargo.toml
crates/rune-workspace/src/: lib.rs
docs/: DEVELOPER_GUIDE.md  api-reference.md  cli-commands.md  docker-usage.md  embedded-mode.md  git-replacement-guide.md  intelligent-locking.md  lfs-and-locks.md  overview.md  practical-examples.md  professional-enhancement-summary.md  revolutionary-analysis.md  rune-vcs.md  unreal-integration.md  virtual-workspaces.md
packaging/: build-deb.sh  build-rpm.sh
packaging/debian/: control
packaging/rpm/: rune.spec
release/: checksums.txt
release-macos/: checksums.txt
release-v0.3.1-alpha.5/: checksums.txt
release-v0.3.1-alpha.5/rune-v0.3.1-alpha.5-aarch64-apple-darwin/: LICENSE  RELEASE_NOTES_v0.3.1-alpha.5.md  install.sh
scoop_template/bucket/: rune.json
scripts/: release.sh
tap_template/Formula/: rune.rb
tests/: Cargo.toml  cli_integration_tests.rs  integration_tests.rs
web/: index.html
web/assets/: index--99YSkOL.js  index-BRWoq9cV.css  index-D631dzbC.js  index-D7VbcCQ5.js
web/src/: App-api.tsx  App.tsx  index.css
web/src/components/: BranchesView.tsx  ChangesView.tsx  DetailPanel.tsx  HistoryView.tsx  RepositoryTree.tsx  SettingsView.tsx  Sidebar.tsx  StashView.tsx  TopBar.tsx
web/src/services/: api.ts
web/src/styles/: globals.css
