
[workspace]
resolver = "2"
members = [
    "crates/rune-cli",
    "crates/rune-core", 
    "crates/rune-store",
    "crates/rune-delta",
    "crates/rune-pack",
    "crates/rune-lfs",
    "crates/rune-remote",
    "crates/rune-docs",
    "crates/rune-workspace",
    "crates/rune-draft",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.3.0-alpha.4"
authors = ["Rune Maintainers <dev@example.invalid>"]
description = "Rune - A modern, intelligent version control system"
homepage = "https://github.com/CaptainOtto/rune-vcs"
repository = "https://github.com/CaptainOtto/rune-vcs"
documentation = "https://docs.rs/rune-vcs"
readme = "README.md"
keywords = ["vcs", "git", "version-control", "dvcs", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock","std"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json","gzip","rustls-tls"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
blake3 = "1"
glob = "0.3"
zstd = "0.13"
toml = "0.8"
tempfile = "3.8"
