[package]
name = "rune-vcs-integration"
version = "0.0.1"
edition = "2021"

[dependencies]
rune-core = { path = "../crates/rune-core" }
rune-store = { path = "../crates/rune-store" }
rune-delta = { path = "../crates/rune-delta" }
rune-pack = { path = "../crates/rune-pack" }
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_benchmarks"
harness = false
