[package]
name = "rune-ai"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "AI-powered intelligence features for Rune VCS"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
gix = "0.63"
rune-core = { path = "../rune-core" }

# ML dependencies (optional features)
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
tokenizers = { version = "0.19", optional = true }

[features]
default = []
ml = ["candle-core", "candle-nn", "tokenizers"]

[dev-dependencies]
tempfile = "3.8"
