
[package]
name = "rune-cli"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Rune VCS - Command-line interface for the modern version control system"
homepage = "https://github.com/CaptainOtto/rune-vcs"
repository = "https://github.com/CaptainOtto/rune-vcs"
documentation = "https://docs.rs/rune-cli"
readme = "../../README.md"
keywords = ["vcs", "git", "version-control", "dvcs", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rune-core = { path = "../rune-core" }
rune-store = { path = "../rune-store" }
rune-lfs = { path = "../rune-lfs" }
rune-remote = { path = "../rune-remote" }
rune-performance = { path = "../rune-performance" }
axum = { workspace = true }

rune-delta = { path = "../rune-delta" }
blake3 = { workspace = true }
whoami = "1.4"

serde_yaml = "0.9"
colored = "2.1"
console = "0.15"

[dev-dependencies]
tempfile = "3.8"
rune-core = { path = "../rune-core" }
rune-store = { path = "../rune-store" }

[[test]]
name = "cli_integration_tests"
path = "../../tests/cli_integration_tests.rs"

[[test]]
name = "integration_tests"
path = "../../tests/integration_tests.rs"
