[package]
name = "rune-docs"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Built-in documentation system for Rune VCS"
authors = ["Rune Team"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
warp = "0.3"
pulldown-cmark = "0.10"
rust-embed = { version = "8.0", features = ["debug-embed"] }
mime_guess = "2.0"
handlebars = "4.5"
colored = "2.0"
dirs = "5.0"
clap = { workspace = true }

[features]
default = []
serve = []
