
[package]
name = "rune-lfs"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
glob = "0.3"
walkdir = "2.0"
hostname = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
glob = "0.3"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
