[package]
name = "rune-performance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance operations and optimization framework for Rune VCS"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
memmap2 = "0.9"
lru = "0.12"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
