[package]
name = "rune-planning"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight planning model and storage for Rune"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
