
[package]
name = "rune-remote"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1"
walkdir = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
