
[package]
name = "rune-remote"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bytes = "1.5"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
hyper = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
dirs = "5.0"
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
rune-core = { path = "../rune-core" }

[dev-dependencies]
tempfile = "3.8"
