
[package]
name = "rune-store"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
rune-core = { path = "../rune-core" }

toml = { workspace = true }
hex = "0.4.3"
